Avoid z-index and fix element orders instead between bar and fade

--- a/packages/core/src/scss/scroll.scss
+++ b/packages/core/src/scss/scroll.scss
@@ -106,7 +106,6 @@
 }
 
 .mr-scroll_bar {
-  z-index: 1; // So that hidden content fade doesn't show over the bar
   position: absolute;
   display: flex;
 
